# adobe-dng-sdk

./: .gitignore  DNG_ReadMe.txt  DNG_SDK1_1_Readme.txt  JXL_ReadMe.txt  README.md  ReadMe.txt  XMP_ReadMe.txt
dng_sdk/documents/: JPEG_ReadMe.txt
dng_sdk/documents/dng_sdk/source/: dng_classes.h  dng_deprecated_flags.h  dng_flags.h  dng_ifd.cpp  dng_ifd.h  dng_jpeg_image.cpp  dng_jpeg_image.h  dng_negative.cpp  dng_preview.cpp  dng_tag_values.h  dng_validate.cpp  dng_xmp_sdk.cpp
dng_sdk/documents/doxygen/: dng_validate.dox  doxygen_config  footer.dox  header.dox  include_stub.dox  mainpage.dox
dng_sdk/documents/doxygen/html/: annotated.html  class_auto_array-members.html  class_auto_array.html  class_auto_ptr-members.html  class_auto_ptr.html  class_preserve_stream_read_position-members.html  class_preserve_stream_read_position.html  class_s_i_m_d_traits-members.html  class_s_i_m_d_traits.html  class_s_i_m_d_traits_3_01_a_v_x2_01_4-members.html  class_s_i_m_d_traits_3_01_a_v_x2_01_4.html  class_s_i_m_d_traits_3_01_a_v_x512___s_k_x_01_4-members.html  class_s_i_m_d_traits_3_01_a_v_x512___s_k_x_01_4.html  class_s_i_m_d_traits_3_01_a_v_x_01_4-members.html  class_s_i_m_d_traits_3_01_a_v_x_01_4.html  class_s_i_m_d_traits_3_01_s_s_e2_01_4-members.html  class_s_i_m_d_traits_3_01_s_s_e2_01_4.html  class_temp_big_endian-members.html  class_temp_big_endian.html  class_temp_little_endian-members.html  class_temp_little_endian.html  class_temp_stream_sniffer-members.html  class_temp_stream_sniffer.html  classcolor__tag__set-members.html  classcolor__tag__set.html  classdng__1d__concatenate-members.html  classdng__1d__concatenate.html  classdng__1d__function-members.html  classdng__1d__function.html  classdng__1d__identity-members.html  classdng__1d__identity.html  classdng__1d__inverse-members.html  classdng__1d__inverse.html  classdng__1d__table-members.html  classdng__1d__table.html  classdng__abort__sniffer-members.html  classdng__abort__sniffer.html  classdng__area__spec-members.html  classdng__area__spec.html  classdng__area__task-members.html  (+625 more)
dng_sdk/documents/sample_files/: 06_PGTM2_unsigned16.dng  08_PGTM2_float32.dng  10_ImageSequenceInfo_2_of_3.dng
dng_sdk/projects/linux/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
dng_sdk/projects/mac/dng_sdk.xcodeproj/: project.pbxproj
dng_sdk/projects/mac/dng_validate.xcodeproj/: project.pbxproj
dng_sdk/projects/mac/xcconfig/: ValidateCommonFlags.xcconfig  ValidateDebug64.xcconfig  ValidateRelease64.xcconfig  dngsdkArchDeploy.xcconfig  dngsdkBuild.xcconfig  dngsdkDebug.xcconfig  dngsdkFlags.xcconfig  dngsdkRelease.xcconfig  dngsdkRoot.xcconfig  dngsdkValidateDebug.xcconfig  dngsdkValidateFlags.xcconfig  dngsdkValidateRelease.xcconfig  xmp.xcconfig
dng_sdk/projects/win/: dng_sdk.sln  dng_validate.sln
dng_sdk/projects/win/dng_sdk/: dng_sdk.vcproj  dng_sdk.vcxproj  dng_sdk.vcxproj.filters
dng_sdk/projects/win/dng_validate/: dng_validate.vcproj  dng_validate.vcxproj  dng_validate.vcxproj.filters
dng_sdk/projects/win/settings/: dngsdk32.props  dngsdk64.props  dngsdkBuild.props  dngsdkDebug.props  dngsdkFlags.props  dngsdkFullLib.props  dngsdkLib.props  dngsdkRelease.props  dngsdkRoot.props  dngsdkValidateFlags.props  dngsdkValidateTarget.props  dngsdkWarningTreatment.props
dng_sdk/source/: dng_1d_function.cpp  dng_1d_function.h  dng_1d_table.cpp  dng_1d_table.h  dng_abort_sniffer.cpp  dng_abort_sniffer.h  dng_area_task.cpp  dng_area_task.h  dng_assertions.h  dng_auto_ptr.h  dng_bad_pixels.cpp  dng_bad_pixels.h  dng_big_table.cpp  dng_big_table.h  dng_bottlenecks.cpp  dng_bottlenecks.h  dng_camera_profile.cpp  dng_camera_profile.h  dng_classes.h  dng_color_space.cpp  dng_color_space.h  dng_color_spec.cpp  dng_color_spec.h  dng_date_time.cpp  dng_date_time.h  dng_errors.h  dng_exceptions.cpp  dng_exceptions.h  dng_exif.cpp  dng_exif.h  dng_fast_module.h  dng_file_stream.cpp  dng_file_stream.h  dng_filter_task.cpp  dng_filter_task.h  dng_fingerprint.cpp  dng_fingerprint.h  dng_flags.h  dng_gain_map.cpp  dng_gain_map.h  (+112 more)
dng_sdk/targets/mac/release/: dng_validate
dng_sdk/targets/mac/release64/: dng_validate
libjpeg/: jconfig.h
libjxl/client_projects/mac/Configs/: jxl_release.xcconfig
libjxl/client_projects/mac/jxl.xcodeproj/: project.pbxproj
libjxl/client_projects/win/: brotli.vcxproj  highway.vcxproj  jxl.sln  jxl.vcxproj.filters
libjxl/client_projects/win/settings/: brotliFlags.props  hwyFlags.props  jxlFlags.props
libjxl/libjxl/: CMakeLists.txt
libjxl/libjxl/lib/: CMakeLists.txt  jxl_extras.cmake
sample_files/: 05_PGTM2_unsigned8.dng  07_PGTM2_float16.dng  09_ImageSequenceInfo_1_of_3.dng  11_ImageSequenceInfo_3_of_3.dng  14_hdr_sdr_profiles.dng
xmp/toolkit/XMPCompareAndMerge/: XMPCompareAndMergeDefines_I.h
xmp/toolkit/XMPCompareAndMerge/ImplHeaders/: GenericStrategyDatabaseImpl.h  ThreeWayConflictIdentificationEngineImpl.h  ThreeWayGenericStrategyImpl.h  ThreeWayMergeResultImpl.h  ThreeWayStrategyWrapperImpl.h  TwoWayBasicComparisonResultImpl.h  TwoWayComparisonEngineImpl.h  TwoWayConflictResolutionStrategyForThreeWayConflictIdentification.h  TwoWayUnResolvedConflictImpl.h  UniversalArrayOfDateImpl.h  UniversalArrayOfSimpleNodeImpl.h  UniversalArrayOfStructureOfSimpleAndStructOfSimpleImpl.h  UniversalBlindStrategyImpl.h  UniversalHistoryStrategyImpl.h  UniversalIngredientsStrategyImpl.h  UniversalLatestDateStrategyImpl.h  UniversalOldestDateStrategyImpl.h  UniversalPantryStrategyImpl.h  UniversalSimpleNodeStrategyImpl.h  UniversalVersionsStrategyImpl.h
xmp/toolkit/XMPCompareAndMerge/Interfaces/: IThreeWayMergeResult_I.h  (+2 more)
xmp/toolkit/source/: EndianUtils.hpp  Host_IO-POSIX.cpp  Host_IO-Win.cpp  Host_IO.hpp  IOUtils.cpp  IOUtils.hpp  PerfUtils.hpp  UnicodeConversions.cpp  UnicodeConversions.hpp  XIO.cpp  XML_Node.cpp  XMPStream_IO.hpp  XMP_LibUtils.cpp  XMP_ProgressTracker.cpp  XMP_ProgressTracker.hpp
xmp_sdk/public/include/: TXMPFiles.hpp  TXMPIterator.hpp  TXMPMeta.hpp  TXMPUtils.hpp  XMP.hpp  XMP.incl_cpp  XMP_Const.h  XMP_Environment.h  XMP_Version.h
(+867 files in other folders)
